--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Lato:wght@700&family=Nunito:wght@600&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&family=Kanit:ital,wght@0,400;0,500;0,600;0,800;1,700&family=Lato:wght@700&family=Nunito:wght@600&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
